BBvideo overflow protection (mainly fixes slideshare)

--- a/mssti_abbc3/root/styles/abbcode/abbcode.css
+++ b/mssti_abbc3/root/styles/abbcode/abbcode.css
@@ -690,6 +690,7 @@ span.anchor {
 	background-color: #555555;
 	line-height: 0em;
 	font-size: 0px;
+	overflow: hidden;
 }
 
 .bbvideo_thumb {
